--- a/Versions.properties
+++ b/Versions.properties
@@ -1,7 +1,7 @@
 #
-#Sat Mar 09 10:57:07 PST 2019
-CodenameOne_SRCzip=62
-CodenameOneJar=62
+#Mon Mar 25 10:10:00 PDT 2019
+CodenameOne_SRCzip=64
+CodenameOneJar=64
 CodeNameOneBuildClientJar=16
 CLDC11Jar=18
-JavaSEJar=62
+JavaSEJar=64
